--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-validator": "^6.6.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.10.13",
